Add markdown cell explaination after boundary map

--- a/biodiveristy.ipynb
+++ b/biodiveristy.ipynb
@@ -208,6 +208,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9eb6f032-2d67-44cd-9dcf-8aa2f6f95a5e",
+   "metadata": {},
+   "source": [
+    "Now that we have Phoenix boundary mapped, we can move on to the Biodiversity Index dataset. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea75c43b-a902-4b1a-a103-8d195d32c0ba",
    "metadata": {},
    "source": [
